; ModuleID = '/home/carl/AnghaBench/libuv/src/win/extr_process.c_uv_utf8_to_utf16_alloc.c'
source_filename = "/home/carl/AnghaBench/libuv/src/win/extr_process.c_uv_utf8_to_utf16_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_UTF8 = common dso_local global i32 0, align 4
@ERROR_OUTOFMEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32**)* @uv_utf8_to_utf16_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uv_utf8_to_utf16_alloc(i8* %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32** %1, i32*** %5, align 8
  %9 = load i32, i32* @CP_UTF8, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @MultiByteToWideChar(i32 %9, i32 0, i8* %10, i32 -1, i32* null, i32 0)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  %13 = icmp sle i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = call i32 (...) @GetLastError()
  store i32 %15, i32* %3, align 4
  br label %40

16:                                               ; preds = %2
  %17 = load i32, i32* %6, align 4
  %18 = sext i32 %17 to i64
  %19 = mul i64 %18, 4
  %20 = trunc i64 %19 to i32
  %21 = call i64 @uv__malloc(i32 %20)
  %22 = inttoptr i64 %21 to i32*
  store i32* %22, i32** %8, align 8
  %23 = load i32*, i32** %8, align 8
  %24 = icmp eq i32* %23, null
  br i1 %24, label %25, label %27

25:                                               ; preds = %16
  %26 = load i32, i32* @ERROR_OUTOFMEMORY, align 4
  store i32 %26, i32* %3, align 4
  br label %40

27:                                               ; preds = %16
  %28 = load i32, i32* @CP_UTF8, align 4
  %29 = load i8*, i8** %4, align 8
  %30 = load i32*, i32** %8, align 8
  %31 = load i32, i32* %6, align 4
  %32 = call i32 @MultiByteToWideChar(i32 %28, i32 0, i8* %29, i32 -1, i32* %30, i32 %31)
  store i32 %32, i32* %7, align 4
  %33 = load i32, i32* %7, align 4
  %34 = load i32, i32* %6, align 4
  %35 = icmp eq i32 %33, %34
  %36 = zext i1 %35 to i32
  %37 = call i32 @assert(i32 %36)
  %38 = load i32*, i32** %8, align 8
  %39 = load i32**, i32*** %5, align 8
  store i32* %38, i32** %39, align 8
  store i32 0, i32* %3, align 4
  br label %40

40:                                               ; preds = %27, %25, %14
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i32 @MultiByteToWideChar(i32, i32, i8*, i32, i32*, i32) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i64 @uv__malloc(i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
